--- a/src/app/components/botones/botones.component.css
+++ b/src/app/components/botones/botones.component.css
@@ -28,3 +28,12 @@
     color: white;
   }
   
+
+  h1 {
+    font-size: 2.5em;
+    font-weight: bold;
+    color: #333;
+    text-align: center;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+  }
